# grading-llm

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/: sample_sanitized.csv
data/labels/: labels_20251227T230855Z.csv  labels_20251227T230855Z.csv.meta.json  labels_20251227T230924Z.csv  labels_20251227T230924Z.csv.meta.json
docs/: api.md
infra/: Dockerfile  docker-compose.yml
models/: train.20251228T054547Z.s42.1eda49b7.summary.json  train.20251228T054547Z.s42.1eda49b7.tfidf.joblib  train.20251228T054722Z.s42.d6f26e5d.summary.json  train.20251228T054722Z.s42.d6f26e5d.tfidf.joblib  train.20251228T055643Z.s42.57d405f7.summary.json  train.20251228T055643Z.s42.57d405f7.tfidf.joblib  train.20251228T055933Z.s42.9e494d51.model.joblib  train.20251228T055933Z.s42.9e494d51.summary.json  train.20251228T055933Z.s42.9e494d51.tfidf.joblib
notebooks/: 00_baseline_eval.ipynb
scripts/: generate_examples_from_csv.py  generate_label_template_from_csv.py  generate_synthetic_dataset.py  inspect_labels.py  run_baseline_eval.py  run_train.sh  validate_data.py
src/api/: main.py  schemas.py
src/baseline/: classical.py  llm_client.py  prompt_runner.py
src/data/: __init__.py  anonymizer.py  schema.md  schema.py
src/eval/: metrics.py
src/finetune/: lora_finetune.py
src/store/: label_store.py
src/train/: train.py
tests/: test_anonymizer.py  test_api.py  test_baseline.py  test_data_schema.py  test_train.py
ui/: streamlit_app.py
